# libmcm

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
doc/: Makefile.am  doxyfile.in  doxygen_mainpage.h.in
src/: Makefile.am  camera-matrices.c  camera-matrices.h  libmcm.h  main.c  matrix-test.c  matrix.c  matrix.h  operators.h  ortho-data  ortho-res  proj-data  proj-res  vectors.c  vectors.h  vectors.lisp  view-data  view-res
